--- a/Calculadora_EESA_Xamarin/MainPage.xaml
+++ b/Calculadora_EESA_Xamarin/MainPage.xaml
@@ -3,25 +3,45 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Calculadora_EESA_Xamarin.MainPage">
 
-    <StackLayout>
-        <Frame BackgroundColor="#2196F3" Padding="24" CornerRadius="0">
-            <Label Text="Welcome to Xamarin.Forms!" HorizontalTextAlignment="Center" TextColor="White" FontSize="36"/>
+    <StackLayout BackgroundColor="#CBCBDC">
+        <Frame BackgroundColor="#37A1C8" Padding="24" CornerRadius="0">
+            <Label Text="Calculadora EESA" HorizontalTextAlignment="Center" TextColor="White" FontSize="36"/>
         </Frame>
+        <Entry Placeholder="Resultado" x:Name="Resultado" IsEnabled="False" HorizontalTextAlignment="Center" TextColor="White" FontSize="36"/>
+        <Grid Padding="15">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
 
-        <Entry Placeholder="Resultado" x:Name="Resultado" IsEnabled="False" HorizontalTextAlignment="Center"/>
-        <Button Text="7" />
-        <Button Text="4" />
-        <Button Text="1" />
-        <Button Text="0" />
-        <Button Text="8" />
-        <Button Text="5" />
-        <Button Text="2" />
-        <Button Text="0" />
-        <Button Text="9" />
-        <Button Text="6" />
-        <Button Text="3" />
-        <Button Text="." />
+            <Button Text="1" Grid.Row="0" Grid.Column="0" TextColor="White" BackgroundColor="#272727" FontSize="36" Name="1"/>
+            <Button Text="2" Grid.Row="0" Grid.Column="1" TextColor="White" BackgroundColor="#272727" FontSize="36" Name="2"/>
+            <Button Text="3" Grid.Row="0" Grid.Column="2" TextColor="White" BackgroundColor="#272727" FontSize="36" Name="3"/>
+            <Button Text="4" Grid.Row="1" Grid.Column="0" TextColor="White" BackgroundColor="#272727" FontSize="36" Name="4"/>
+            <Button Text="5" Grid.Row="1" Grid.Column="1" TextColor="White" BackgroundColor="#272727" FontSize="36" Name="5"/>
+            <Button Text="6" Grid.Row="1" Grid.Column="2" TextColor="White" BackgroundColor="#272727" FontSize="36" Name="6"/>
+            <Button Text="7" Grid.Row="2" Grid.Column="0" TextColor="White" BackgroundColor="#272727" FontSize="36" Name="7"/>
+            <Button Text="8" Grid.Row="2" Grid.Column="1" TextColor="White" BackgroundColor="#272727" FontSize="36" Name="8"/>
+            <Button Text="9" Grid.Row="2" Grid.Column="2" TextColor="White" BackgroundColor="#272727" FontSize="36" Name="9"/>
+            <Button Text="0" Grid.Row="3" Grid.Column="0" TextColor="White" BackgroundColor="#272727" FontSize="36" Name="0"/>
+            <Button Text="00" Grid.Row="3" Grid.Column="1" TextColor="White" BackgroundColor="#272727" FontSize="36" Name="00"/>
+            <Button Text="." Grid.Row="3" Grid.Column="2" TextColor="White" BackgroundColor="#272727" FontSize="36" Name="."/>
+            <Button Text="/" Grid.Row="0" Grid.Column="4" TextColor="White" BackgroundColor="Gray" FontSize="40"/>
+            <Button Text="*" Grid.Row="1" Grid.Column="4" TextColor="White" BackgroundColor="Gray" FontSize="40"/>
+            <Button Text="-" Grid.Row="2" Grid.Column="4" TextColor="White" BackgroundColor="Gray" FontSize="40"/>
+            <Button Text="+" Grid.Row="3" Grid.Column="4" TextColor="White" BackgroundColor="Gray" FontSize="40"/>
+            <Button Text="=" Grid.Row="4" Grid.Column="4" TextColor="White" BackgroundColor="Gray" FontSize="40"/>
 
+        </Grid>
     </StackLayout>
 
 </ContentPage>
