--- a/Calculadora_EESA_Xamarin/MainPage.xaml
+++ b/Calculadora_EESA_Xamarin/MainPage.xaml
@@ -3,11 +3,11 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Calculadora_EESA_Xamarin.MainPage">
 
-    <StackLayout BackgroundColor="#CBCBDC">
-        <Frame BackgroundColor="#37A1C8" Padding="24" CornerRadius="0">
-            <Label Text="Calculadora EESA" HorizontalTextAlignment="Center" TextColor="White" FontSize="36"/>
+    <StackLayout BackgroundColor="Black">
+        <Frame BackgroundColor="Black" Padding="24" CornerRadius="0">
+            <Label Text="Calculadora" HorizontalTextAlignment="Center" TextColor="#FF7433" FontSize="36"/> 
         </Frame>
-        <Entry Placeholder="Resultado" x:Name="Resultado" IsEnabled="False" HorizontalTextAlignment="Center" TextColor="White" FontSize="36"/>
+        <Entry Placeholder="0" x:Name="Resultado"  HorizontalTextAlignment="Center" TextColor="White" FontSize="36"/>
         <Grid Padding="15">
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
@@ -23,24 +23,25 @@
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
 
-            <Button Text="1" Grid.Row="0" Grid.Column="0" TextColor="White" BackgroundColor="#272727" FontSize="36"  CornerRadius="10" x:Name="uno"         Clicked="Numero"/>
-            <Button Text="2" Grid.Row="0" Grid.Column="1" TextColor="White" BackgroundColor="#272727" FontSize="36" CornerRadius="10" x:Name="dos"          Clicked="Numero"/>
-            <Button Text="3" Grid.Row="0" Grid.Column="2" TextColor="White" BackgroundColor="#272727" FontSize="36" CornerRadius="10" x:Name="tres"         Clicked="Numero"/>
-            <Button Text="4" Grid.Row="1" Grid.Column="0" TextColor="White" BackgroundColor="#272727" FontSize="36" CornerRadius="10" x:Name="cuatro"       Clicked="Numero"/>
-            <Button Text="5" Grid.Row="1" Grid.Column="1" TextColor="White" BackgroundColor="#272727" FontSize="36" CornerRadius="10" x:Name="cinco"        Clicked="Numero"/>
-            <Button Text="6" Grid.Row="1" Grid.Column="2" TextColor="White" BackgroundColor="#272727" FontSize="36" CornerRadius="10" x:Name="seis"         Clicked="Numero"/>
-            <Button Text="7" Grid.Row="2" Grid.Column="0" TextColor="White" BackgroundColor="#272727" FontSize="36" CornerRadius="10" x:Name="siete"        Clicked="Numero"/>
-            <Button Text="8" Grid.Row="2" Grid.Column="1" TextColor="White" BackgroundColor="#272727" FontSize="36" CornerRadius="10" x:Name="ocho"         Clicked="Numero"/>
-            <Button Text="9" Grid.Row="2" Grid.Column="2" TextColor="White" BackgroundColor="#272727" FontSize="36" CornerRadius="10" x:Name="nueve"        Clicked="Numero"/>
-            <Button Text="0" Grid.Row="3" Grid.Column="0" TextColor="White" BackgroundColor="#272727" FontSize="36" CornerRadius="10" x:Name="cero"         Clicked="Numero"/>
-            <Button Text="00" Grid.Row="3" Grid.Column="1" TextColor="White" BackgroundColor="#272727" FontSize="36" CornerRadius="10" x:Name="cerocero"    Clicked="Numero"/>
-            <Button Text="." Grid.Row="3" Grid.Column="2" TextColor="White" BackgroundColor="#272727" FontSize="36" CornerRadius="10" x:Name="punto"        Clicked="Numero"/>
-            <Button Text="/" Grid.Row="0" Grid.Column="3" TextColor="White" BackgroundColor="Gray" FontSize="40" CornerRadius="10" x:Name="division"        Clicked="Numero"/>
-            <Button Text="*" Grid.Row="1" Grid.Column="3" TextColor="White" BackgroundColor="Gray" FontSize="40" CornerRadius="10" x:Name="multiplicacion"  Clicked="Numero"/>
-            <Button Text="-" Grid.Row="2" Grid.Column="3" TextColor="White" BackgroundColor="Gray" FontSize="40" CornerRadius="10" x:Name="resta"           Clicked="Numero"/>
-            <Button Text="+" Grid.Row="3" Grid.Column="3" TextColor="White" BackgroundColor="Gray" FontSize="40" CornerRadius="10" x:Name="suma"            Clicked="Numero"/>
-            <Button Text="AC" Grid.Row="4" Grid.Column="2" TextColor="White" BackgroundColor="Gray" FontSize="40" CornerRadius="10" x:Name="borrar"         Clicked="Numero" Grid.ColumnSpan="2"/>
-            <Button Text="=" Grid.Row="4" Grid.Column="3" TextColor="White" BackgroundColor="Gray" FontSize="40" CornerRadius="10" x:Name="igual"           Clicked="Numero" Grid.ColumnSpan="2"/>
+            <Button Text="AC" Grid.Row="0" Grid.Column="0" TextColor="#FF7433"  BackgroundColor="black"     FontSize="36" CornerRadius="50" x:Name="eliminar" Grid.ColumnSpan="1" Clicked="Numero" />
+            <Button Text="C" Grid.Row="0" Grid.Column="1" TextColor="#FF7433"  BackgroundColor="black"     FontSize="36" CornerRadius="50" x:Name="borrar"   Grid.ColumnSpan="1" Clicked="Numero" />
+            <Button Text="%" Grid.Row="0" Grid.Column="2" TextColor="#FF7433"  BackgroundColor="black"     FontSize="36" CornerRadius="50" x:Name="residuo"  Grid.ColumnSpan="1" Clicked="Numero" />
+            <Button Text="7" Grid.Row="1" Grid.Column="0" TextColor="Beige"      BackgroundColor="black"     FontSize="36" CornerRadius="50" x:Name="siete"    Grid.ColumnSpan="1" Clicked="Numero" />
+            <Button Text="8" Grid.Row="1" Grid.Column="1" TextColor="Beige"      BackgroundColor="black"     FontSize="36" CornerRadius="50" x:Name="ocho"     Grid.ColumnSpan="1" Clicked="Numero" />
+            <Button Text="9" Grid.Row="1" Grid.Column="2" TextColor="Beige"      BackgroundColor="black"     FontSize="36" CornerRadius="50" x:Name="nueve"    Grid.ColumnSpan="1" Clicked="Numero" />
+            <Button Text="4" Grid.Row="2" Grid.Column="0" TextColor="Beige"      BackgroundColor="black"     FontSize="36" CornerRadius="50" x:Name="cuatro"   Grid.ColumnSpan="1" Clicked="Numero" />
+            <Button Text="5" Grid.Row="2" Grid.Column="1" TextColor="Beige"      BackgroundColor="black"     FontSize="36" CornerRadius="50" x:Name="cinco"    Grid.ColumnSpan="1" Clicked="Numero" />
+            <Button Text="6" Grid.Row="2" Grid.Column="2" TextColor="Beige"      BackgroundColor="black"     FontSize="36" CornerRadius="50" x:Name="seis"     Grid.ColumnSpan="1" Clicked="Numero" />
+            <Button Text="1" Grid.Row="3" Grid.Column="0" TextColor="Beige"      BackgroundColor="black"     FontSize="36" CornerRadius="50" x:Name="uno"      Grid.ColumnSpan="1" Clicked="Numero" />
+            <Button Text="2" Grid.Row="3" Grid.Column="1" TextColor="Beige"      BackgroundColor="black"     FontSize="36" CornerRadius="50" x:Name="dos"      Grid.ColumnSpan="1" Clicked="Numero" />
+            <Button Text="3" Grid.Row="3" Grid.Column="2" TextColor="Beige"      BackgroundColor="black"     FontSize="36" CornerRadius="50" x:Name="tres"     Grid.ColumnSpan="1" Clicked="Numero" />
+            <Button Text="÷" Grid.Row="0" Grid.Column="3" TextColor="#FF7433"  BackgroundColor="black"     FontSize="40" CornerRadius="50" x:Name="division" Grid.ColumnSpan="1" Clicked="Numero" />
+            <Button Text="x" Grid.Row="1" Grid.Column="3" TextColor="#FF7433"  BackgroundColor="black"     FontSize="27" CornerRadius="50" x:Name="por"      Grid.ColumnSpan="1" Clicked="Numero" />
+            <Button Text="-" Grid.Row="2" Grid.Column="3" TextColor="#FF7433"  BackgroundColor="black"     FontSize="50" CornerRadius="50" x:Name="menos"    Grid.ColumnSpan="1" Clicked="Numero" />
+            <Button Text="+" Grid.Row="3" Grid.Column="3" TextColor="#FF7433"  BackgroundColor="black"     FontSize="40" CornerRadius="50" x:Name="mas"      Grid.ColumnSpan="1" Clicked="Numero" />
+            <Button Text="0" Grid.Row="4" Grid.Column="0" TextColor="Beige"      BackgroundColor="black"     FontSize="40" CornerRadius="50" x:Name="cero"     Grid.ColumnSpan="2" Clicked="Numero" />
+            <Button Text="." Grid.Row="4" Grid.Column="2" TextColor="Beige"      BackgroundColor="black"     FontSize="40" CornerRadius="50" x:Name="punto"    Grid.ColumnSpan="1" Clicked="Numero" />
+            <Button Text="=" Grid.Row="4" Grid.Column="3" TextColor="Beige"      BackgroundColor="#FF7433" FontSize="40" CornerRadius="50" x:Name="igual"    Grid.ColumnSpan="1" Clicked="Numero" />
 
         </Grid>
     </StackLayout>
